Big recombine + start using records